src/objects/Product_Sub_Module__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>text(Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Module_Code__c</fullName>
        <label>Product Sub-Module Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Module_Description__c</fullName>
        <label>Product Sub-Module Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>text( Product__r.Product_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Sub-Modules</relationshipLabel>
        <relationshipName>Product_Sub_Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sellable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sellable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supportable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supportable</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Sub-Module</label>
    <nameField>
        <label>Product Sub-Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Sub-Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>